Fixed: Slider titles clipping over each other in mobile view

--- a/site-sass/components/slick-styling.scss
+++ b/site-sass/components/slick-styling.scss
@@ -32,7 +32,7 @@
   .overlay-slide {
     z-index: 1;
     position: absolute;
-    width: 900px;
+    max-width: 900px;
     margin: auto;
     top: 0; bottom: 0; left: 0; right: 0;
     top: 50%;
